finally swaggo version works
